--- a/ipcv/index.html
+++ b/ipcv/index.html
@@ -67,6 +67,8 @@ IMPA website
 <LI> <a href=lectures/videos.html> Lecture Videos on Fundamentals</a>
 <LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRrAUBu4xtN28htuAv3tiR3>
 Lecture Videos on Generative Models</a>
+<LI> <a href=lectures/lab.html> Lab Practice </a>
+
 <!--
 <LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRaFa39TdNN3FgPAKkcuHvj>
 Lecture Videos </a>
