--- a/ipcv/lectures/lab.html
+++ b/ipcv/lectures/lab.html
@@ -13,7 +13,7 @@
 
 <H3>Introduction to PyTorch and Neural Networks</H3>
 <UL>
-  <LI> <a href=https://www.youtube.com/watch?v=cGxv8tOaA7I>Video </a>
+  <LI> <a href=https://www.youtube.com/watch?v=cGxv8tOaA7I>Tutorial Video </a>
   <LI> <a href=https://colab.research.google.com/github/pgdinamica/deeplearning/blob/main/notebooks/Introdução_ao_Pytorch.ipynb>Colab Notebook</a>
 </UL>
 
