--- a/hp/lvelho.html
+++ b/hp/lvelho.html
@@ -2,27 +2,23 @@
 <HTML>
 <HEAD>
 <TITLE> Luiz Velho's WebSpot </TITLE>
-<!--
-<link rel="shortcut icon" href=http://lvelho.impa.br />
-<link rel="apple-touch-icon" sizes="57x57" href="href=http://lvelho.impa.br/favicons/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="href=http://lvelho.impa.br/favicons/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="href=http://lvelho.impa.br/favicons/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="href=http://lvelho.impa.br/favicons/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="href=http://lvelho.impa.br/favicons/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="href=http://lvelho.impa.br/favicons/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="href=http://lvelho.impa.br/favicons/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="href=http://lvelho.impa.br/favicons/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="href=http://lvelho.impa.br/favicons/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="href=http://lvelho.impa.br/favicons/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="href=http://lvelho.impa.br/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="href=http://lvelho.impa.br/favicons/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="href=http://lvelho.impa.br/favicons/favicon-16x16.png">
-<link rel="manifest" href="href=http://lvelho.impa.br/favicons/manifest.json">
--->
+<link rel="shortcut icon" href="http://lvelho.impa.br/">
+<link rel="apple-touch-icon" sizes="57x57" href="http://lvelho.impa.br/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="http://lvelho.impa.br/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="http://lvelho.impa.br/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="http://lvelho.impa.br/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="http://lvelho.impa.br/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="http://lvelho.impa.br/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="http://lvelho.impa.br/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="http://lvelho.impa.br/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="http://lvelho.impa.br/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="http://lvelho.impa.br/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://lvelho.impa.br/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="http://lvelho.impa.br/favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="http://lvelho.impa.br/favicons/favicon-16x16.png">
+<link rel="manifest" href="http://lvelho.impa.br/favicons/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<!--
-<meta name="msapplication-TileImage" content="href=http://lvelho.impa.br/favicons/ms-icon-144x144.png">
--->
+<meta name="msapplication-TileImage" content="http://lvelho.impa.br/favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <STYLE TYPE="text/css">
 body {
@@ -71,7 +67,7 @@ p.motto {
 <TR>
 <TD STYLE="text-align: right">
 <P>
-<I>Senior Researcher</I>
+<I>Full Researcher</I>
 at
 <A HREF="http://www.impa.br/">IMPA</A>
 <!-- / <A HREF="http://www.mct.gov.br">MCT</A>, -->
@@ -87,13 +83,13 @@ a bit of Technology
 <TD>
 <UL>
 <LI> <A HREF="hp/contact.html">Contact Information </A>
-<LI> <a href=hp/genealogy.html> Genealogy </a>
+<LI> <a HREF="hp/genealogy.html"> Genealogy </a>
      /
      <A HREF="hp/erdos.html"> Erdos n. </A>
 <LI> <A HREF="hp/background.html"> Curriculum Vitae </A>
 
-<LI> <A HREF="hp/sibgrapi2016.html"> 60</a>,
-<a href=http://lhf.impa.br/lvelho60/> and counting... </A>
+<LI> <A HREF="http://www.visgraf.impa.br/News/files/sibgrapi2016/"> 60</a>,
+<a href="http://lhf.impa.br/lvelho60/"> and counting... </A>
 
 <LI> <A HREF="hp/picts.html"> Picture </A>
      /
