--- a/hp/activities.html
+++ b/hp/activities.html
@@ -36,6 +36,7 @@ Teaching this course during the first term at IMPA.
 <H3> Past Activities </H3>
 
 <UL>
+<LI> <A HREF="activities/17.html">2017</A>
 <LI> <A HREF="activities/16.html">2016</A>
 <LI> <A HREF="activities/15.html">2015</A>
 <LI> <A HREF="activities/14.html">2014</A>
