--- a/hp/activities.html
+++ b/hp/activities.html
@@ -13,7 +13,7 @@
 <DT> August to November *
 <DD>
 Course on
-<A HREF="http://w3.impa.br/~lvelho/ip21">
+<A HREF="./ipcv">
 Computer Vision and Deep Learning
 </A>,
 <BR>
