--- a/hp/demos.html
+++ b/hp/demos.html
@@ -10,5 +10,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue Oct 12 12:10:38 -03 2021 <!-- hhmts end -->
-</body> </html>
+</body>
+</html>
