--- a/hp/background.html
+++ b/hp/background.html
@@ -144,7 +144,7 @@ ISMM 2007,
 <!--
 -->
 Long version: (October 2021) - 
-[<A HREF="http://w3.impa.br/~lvelho/hp/cv/cv-2021.10.09-en.pdf">
+[<A HREF="./cv/cv-2021.10.09-en.pdf">
 PDF file </A>]
 
 <BR>
@@ -155,20 +155,6 @@ CNPq page </a>
 <BR>
 <BR>
 
-<!--
-[
-PDF format
-(<A HREF="http://w3.impa.br/~lvelho/hp/cv/cv-lvelho.pdf">
-cv-lvelho.pdf
-</A>)
-]
-|
-Postscript
-(<A HREF="http://w3.impa.br/~lvelho/hp/cv/cv-lvelho.ps.gz">
-cv-lvelho.ps.gz
-</A>)
-]
--->
 <!--
 <a href=http://lattes.cnpq.br/buscaoperacional/detalhepesq.jsp?pesq="+ luiz carlos velho"> lattes </a>
 -->
@@ -187,14 +173,14 @@ cv-lvelho.ps.gz
 <DL>
 
 <DT>
-<A HREF=http://w3.impa.br/~lvelho/hp/misc/papers-awards-en.txt>
+<A HREF=./misc/papers-awards-en.txt>
 Papers </A>
 
 <BR>
 <BR>
 
 <DT>
-<A HREF=http://w3.impa.br/~lvelho/hp/misc/video-awards.txt>
+<A HREF=./misc/video-awards.txt>
 Videos </A>
 <BR>
 <BR>
@@ -213,10 +199,10 @@ Videos </A>
 
 <DT>
 Resumo Biografico (12/2015) - 
-[<A HREF="http://w3.impa.br/~lvelho/hp/cv/bio-pt.pdf">
+[<A HREF="./cv/bio-pt.pdf">
 PDF file </A>
 |
-[<A HREF=http://w3.impa.br/~lvelho/hp/cv/bio-en.pdf>
+[<A HREF=./cv/bio-en.pdf>
 English Version</a>
 ]
 
@@ -225,7 +211,7 @@ English Version</a>
 
 <DT>
 Memorial Descritivo (12/2015) - 
-[<A HREF="http://w3.impa.br/~lvelho/hp/cv/memorial-2015.pdf">
+[<A HREF="./cv/memorial-2015.pdf">
 PDF file </A>]
 
 <BR>
@@ -233,7 +219,7 @@ PDF file </A>]
 
 <DT>
 Testimony - IMPA 50 Anos
-[<A HREF="http://w3.impa.br/~lvelho/hp/misc/impa-50anos.pdf">
+[<A HREF="./misc/impa-50anos.pdf">
 PDF file </A>]
 
 <BR>
@@ -252,7 +238,7 @@ PDF file </A>]
 <DT>
 
 Rede Globo (interview by Mario Barreto)
-[<a href=http://lvelho.impa.br/hp/cv/Depoimento_Luis_Velho-revisado.pdf>
+[<a href=./cv/Depoimento_Luis_Velho-revisado.pdf>
 PDF File </a>]
 
 </DL>
