--- a/hp/background.html
+++ b/hp/background.html
@@ -289,7 +289,7 @@ Resercher ID - <a href=http://www.researcherid.com/rid/B-6979-2008> Publications
 <BR>
 <BR>
 
-BDLP - <a href=https://dblp.uni-trier.de/pers/hd/v/Velho:Luiz> Page </a>
+BDLP - <a href=https://dblp.uni-trier.de/pid/v/LuizVelho.html> Page </a>
 
 <BR>
 <BR>
