--- a/hp/background.html
+++ b/hp/background.html
@@ -316,11 +316,11 @@ page </a>
 <BR>
 <BR>
 
+<!--
 Mendeley - <a href=https://www.mendeley.com/profiles/luiz-velho/>page </a>
-
 <BR>
 <BR>
-
+-->
 CRC Press Portal - <a href=https://www.crcpress.com/authors/i207-luiz-velho> page </a>
 
 <BR>
@@ -336,7 +336,7 @@ Math Genealogy - <a href=http://www.genealogy.ams.org/id.php?id=80550> page </a>
 <BR>
 <BR>
 ORCID - <a href=http://orcid.org/0000-0001-5489-4909> page </a> | 
-<a href=http://lvelho.impa.br/hp/cv/orcid-lvelho.png> qrcode </a>
+<a href=./cv/orcid-lvelho.png> qrcode </a>
 
 <BR>
 <BR>
