--- a/hp/sibgrapi2016/index.html
+++ b/hp/sibgrapi2016/index.html
@@ -19,7 +19,7 @@ Luiz Velho 60 Years - SIBGRAPI 2016
 <HR>
 
 <H2>
-The Commemoration
+The Event
 </H2>
 
 <p>
@@ -34,17 +34,9 @@ SIBGRAPI presents a recognition award to Luiz Velho and commemorates his 60th ye
 <br>
 <center>
 
-<H3> The Award </H3>
-<P>
-<IMG SRC="./sibgrapi2016/p3i.jpg" WIDTH="40%">
-<br>
-Commemorative plaque given to Luiz Velho by the SIBGRAPI Organiztion.
-</P>
-<BR>
-
 <H3> The Stage </H3>
 <P>
-<IMG SRC="./sibgrapi2016/p1.jpg" WIDTH="40%">
+<IMG SRC="p1.jpg" WIDTH="40%">
 <br>
 Special Session: Celebrating Luiz Velho's 60th birthday. (Thursday
   Oct, 9:00-10:45)
@@ -52,24 +44,21 @@ Special Session: Celebrating Luiz Velho's 60th birthday. (Thursday
 <BR>
 <H3> The Presentation </H3>
 <P>
-<IMG SRC="./sibgrapi2016/p2.jpg" WIDTH="40%">
+<IMG SRC="p2.jpg" WIDTH="40%">
 <br>
 Siome Klein Goldenstein gives an overview of Luiz Velho's career.
 </P>
 
 <BR>
-
-</center>
-<HR>
-
-<H2>
-The Event at IMPA
-</H2>
-
+<H3> The Award </H3>
+<P>
+<IMG SRC="p3.jpg" WIDTH="40%">
+<br>
+Commemorative plaque given to Luiz Velho by the SIBGRAPI Organiztion.
+</P>
 <BR>
-<H3> <a href=http://lhf.impa.br/lvelho60/>Program</a> </H3>
-<BR>  
-
+  
+</center>
 
 <HR>
 
