--- a/hp/visgraf-lab.html
+++ b/hp/visgraf-lab.html
@@ -4,14 +4,9 @@
 </head>
 
 <body>
-<h1>My Pictures</h1>
+<h1></h1>
 
-<img src="picts/by-noni97.jpg">
-
-<p>
-<img src="picts/luiz_velho-bw.jpg">
-
-
+<img src="picts/visgraf-lab.png">
 
 <address></address>
 </body> </html>
