--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ p.motto {
 <P>
 <I>Senior Researcher</I>
 at
-<A HREF="http://www.impa.br/">IMPA</A>
+<A HREF=hp/impa.html>IMPA</A>
 <!-- / <A HREF="http://www.mct.gov.br">MCT</A>, -->
 <P>
 <I>Leading Scientist</I> of the<BR>
-<A HREF="http://www.visgraf.impa.br">VISGRAF</A> Laboratory
+<A HREF=hp/visgraf-lab.html>VISGRAF</A> Laboratory
 <P CLASS="motto">
 Mathematics, Art,
 a bit of Technology
