--- a/hp/activities.html
+++ b/hp/activities.html
@@ -23,7 +23,7 @@ Teaching this course during the second term at IMPA.
 <DT>March to June
 <DD>
 Course on
-<A HREF="http://w3.impa.br/~lvelho/i3d21">
+<A HREF="">
 "3D Graphics Systems: AI Graphics"
 </A>,
 <BR>
