--- a/hp/impa.html
+++ b/hp/impa.html
@@ -1,12 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
-<title></title>
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <title>HTML Redirect</title>
+  <meta http-equiv="refresh" 
+        content="0; url = https://impa.br" />
 </head>
-
+  
 <body>
-<h1></h1>
+<center>
+  <img src="picts/impa.png">
+</center>
+</body>
+  
+</html>
 
-<img src="picts/impa.png">
 
-<address></address>
-</body> </html>
