--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 body {
 	background-color: white ;
 	color: #444 ;
-	padding: 48px ;
+	padding: 40px ;
 	margin: 0px auto ;
-	max-width: 60em ;
+	max-width: 90% ;
 }
 
 table {
@@ -38,13 +38,13 @@ table {
 }
 
 td {
-	padding-right: 40px ;
+	padding-right: 20px ;
 	vertical-align: top ;
 }
 
 ul {
 	list-style-type: none ;
-	font-size: large ;
+	font-size: 23px ;
 	xtext-transform: lowercase ;
 	padding: 0px ;
 	margin: 0px ;
@@ -72,7 +72,6 @@ p.motto {
 <TD STYLE="text-align: right">
 <P>
 <I>Senior Researcher</I>
-at
 <A HREF=hp/impa.html>IMPA</A>
 <!-- / <A HREF="http://www.mct.gov.br">MCT</A>, -->
 <P>
@@ -86,10 +85,10 @@ a bit of Technology
 
 <TD>
 <UL>
-<LI> <A HREF="hp/contact.html">Contact Information </A>
+<LI> <A HREF="hp/contact.html">Contact Info </A>
 <LI> <a href=hp/genealogy.html> Genealogy </a>
      /
-     <A HREF="hp/erdos.html"> Erdos n. </A>
+     <A HREF="hp/erdos.html"> Erdos# </A>
 <LI> <A HREF="hp/background.html"> Curriculum Vitae </A>
 
 <LI> <A HREF="hp/sibgrapi2016.html"> 60</a>,
