--- a/hp/background.html
+++ b/hp/background.html
@@ -29,7 +29,7 @@ in 1994 from the
 <A HREF="http://www.utoronto.ca">University of Toronto</A>
 under the
 <A HREF="http://www.dgp.toronto.edu">Graphics</A> and
-<A HREF="http://www.cs.toronto.edu/vis/">Vision</A>
+<A HREF="http://learning.cs.toronto.edu/">Vision</A>
 groups.
 
 <P>
@@ -128,8 +128,7 @@ including <a href=http://www.cg.tuwien.ac.at/events/SGP05/speakers.html>
 SGP 2005</a>, CNMAC 2006, the 
 <a href=http://www.sbpcnet.org.br/>SBPC</a> Congress 2006,
 SIBGRAPI 2002 and
-<a href=http://www.inf.pucminas.br/sibgrapi2007/>SIBGRAPI 2007</a>,
-<!--<a href=http://ismm.dpi.inpe.br/2007/>ISMM 2007</a>-->
+>SIBGRAPI 2007,
 ISMM 2007,
 <a href=http://www4.fct.unesp.br/eventos/wvc/index.php>
 </a> WVC 2010, VFX 2015, VFX 2018, VFX 2019, and VFX 2020.
