--- a/hp/background.html
+++ b/hp/background.html
@@ -115,10 +115,12 @@ IX SIBGRAPI
 </A>.
 He was distinguished as the first researcher in South America
 to be on the 
-<A HREF="http://www.siggraph.org/s99/conference/papers/paper_7.html">
+<!--
+<A HREF="http://www.siggraph.org/s99/conference/papers/paper_7.html"></A>
+-->
 SIGGRAPH
 Papers Committee,
-</A> in 1999.
+in 1999.
 He served in the SIGGRAPH Papers Committee also in 2000, 2002 and 2003.
 He was a member of the Eurographics IPC in 2008.
 He received the prestigious grant award "Cientista do Nosso Estado" from
@@ -128,7 +130,7 @@ including <a href=http://www.cg.tuwien.ac.at/events/SGP05/speakers.html>
 SGP 2005</a>, CNMAC 2006, the 
 <a href=http://www.sbpcnet.org.br/>SBPC</a> Congress 2006,
 SIBGRAPI 2002 and
->SIBGRAPI 2007,
+SIBGRAPI 2007,
 ISMM 2007,
 <a href=http://www4.fct.unesp.br/eventos/wvc/index.php>
 </a> WVC 2010, VFX 2015, VFX 2018, VFX 2019, and VFX 2020.
