--- a/hp/activities.html
+++ b/hp/activities.html
@@ -4,20 +4,18 @@
 </HEAD>
 <BODY bgcolor = #ffffff>
 
-<H1> Activities in 2021 </H1>
+<H1> Activities in 2021 - 2nd Semester </H1>
 <P>
 <HR>
 <DL>
 
-
-<DT> August to November *
+<DT> October 18-22
 <DD>
-Course on
-<A HREF="../ipcv">
-Computer Vision and Deep Learning
+<A HREF="https://www.inf.ufrgs.br/sibgrapi2021/">
+SIBGRAPI 2021
 </A>,
 <BR>
-Teaching this course during the second term at IMPA.
+Organizer of the Tutorial on Neural Implicit Surfaces
 <P>
 
 <DT>March to June
@@ -29,7 +27,30 @@ Course on
 <BR>
 Teaching this course during the first term at IMPA.
 <P>
+  
 
+<DT> August to November *
+<DD>
+Course on
+<A HREF="../ipcv">
+Computer Vision and Deep Learning
+</A>,
+<BR>
+Teaching this course during the second term at IMPA.
+<P>
+
+<!--
+<DT>March to June
+<DD>
+Course on
+<A HREF="">
+"3D Graphics Systems: AI Graphics"
+</A>,
+<BR>
+Teaching this course during the first term at IMPA.
+<P>
+-->
+  
 </DL>
 
 <HR>
