--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@ a bit of Technology
 <LI> <A HREF="hp/background.html"> Curriculum Vitae </A>
 
 <LI> <A HREF="hp/sibgrapi2016.html"> 60</a>,
-<a href=http://lhf.impa.br/lvelho60/> and counting... </A>
+<!--
+  <a href=http://lhf.impa.br/lvelho60/> and counting... </A>
+-->
+<a href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and counting... </A>
+  
 
 <LI> <A HREF="hp/picts.html"> Picture </A>
      /
