--- a/hp/teaching.html
+++ b/hp/teaching.html
@@ -179,6 +179,18 @@ course page </a>
 <DL>
 
 <DT> <B><I>
+Neural Networks for Implicit Representations of 3D Scenes
+</I></B>
+<DD> Course Organizer and Lecturer, SIBGRAPI 2021
+<br>
+[
+<a href=https://lvelho.impa.br/ni3d-2021/>
+project page</a>
+]
+<P>
+
+  
+<DT> <B><I>
 Intrinsic Visualization in the Thurston's Geometries
 </I></B>
 <DD> Course Organizer and Lecturer, 33rd CBM
