--- a/hp/publications.html
+++ b/hp/publications.html
@@ -20,6 +20,14 @@ Recent Publications:
 (2021) </a>
 </h3>
 
+<h3>
+&nbsp 
+All Publications:
+<a href=./misc/publications.pdf>
+(PDF) </a>
+
+</h3>
+
 
 <HR>
 
