--- a/hp/misc.html
+++ b/hp/misc.html
@@ -14,7 +14,7 @@ Here is an account of my activities during the pandemic.
 <UL>
 <LI>
 Conferences and Webinars
-[<a href=http://lvelho.impa.br/hp/misc/quarentine.html>
+[<a href=./misc/quarentine.html>
 journal
 </a>]
 </UL>
