--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ td {
 ul {
 	list-style-type: none ;
 	font-size: 23px ;
-	xtext-transform: lowercase ;
+	text-transform: lowercase ;
 	padding: 0px ;
 	margin: 0px ;
 }
@@ -85,17 +85,17 @@ a bit of Technology
 
 <TD>
 <UL>
-<LI> <A HREF="hp/contact.html">Contact Info </A>
+<LI> <A HREF="hp/contact.html">Contact_Info </A>
 <LI> <a href=hp/genealogy.html> Genealogy </a>
      /
      <A HREF="hp/erdos.html"> Erdos# </A>
-<LI> <A HREF="hp/background.html"> Curriculum Vitae </A>
+<LI> <A HREF="hp/background.html"> Curriculum_Vitae </A>
 
 <LI> <A HREF="hp/sibgrapi2016.html"> 60</a>,
 <!--
   <a href=http://lhf.impa.br/lvelho60/> and counting... </A>
 -->
-<a href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and counting... </A>
+<a href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and_counting... </A>
   
 
 <LI> <A HREF="hp/picts.html"> Picture </A>
@@ -107,7 +107,7 @@ a bit of Technology
 
 <TD>
 <UL>
-<LI> <A HREF="hp/activities.html"> Current Activities </A>
+<LI> <A HREF="hp/activities.html"> Activities </A>
 <LI> <A HREF="hp/teaching.html"> Teaching </A>
 <LI> <A HREF="hp/research.html"> Research </A>
 <LI> <A HREF="hp/publications.html"> Publications </A>
@@ -117,8 +117,8 @@ a bit of Technology
 <TD>
 <UL>
 <LI> <A HREF="hp/demos.html"> Demos </A>
-<LI> <A HREF="hp/projects.html"> Projects by Year </A>
-<LI> <A HREF="hp/creative.html"> Creative Work </A>
+<LI> <A HREF="hp/projects.html"> Projects_Year </A>
+<LI> <A HREF="hp/creative.html"> Creative_Work </A>
 <!--
      /
      <A HREF="hp/pers/collections.html"> Photos </A>
