--- a/index.html
+++ b/index.html
@@ -86,17 +86,16 @@ a bit of Technology
 <TD>
 <UL>
 <LI> <A HREF="hp/contact.html">Contact_Info </A>
-<LI> <a href=hp/genealogy.html> Genealogy </a>
+<LI> <a href="hp/genealogy.html"> Genealogy </a>
      /
      <A HREF="hp/erdos.html"> Erdos# </A>
 <LI> <A HREF="hp/background.html"> Curriculum_Vitae </A>
 
-<LI> <A HREF="hp/sibgrapi2016.html"> 60</a>,
+<LI> <A HREF="hp/sibgrapi2016.html"> 60</A>,
+  <A href=http://lhf.impa.br/lvelho60/> and counting... </A>
 <!--
-  <a href=http://lhf.impa.br/lvelho60/> and counting... </A>
--->
-<a href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and_counting... </A>
-  
+<A href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and_counting... </A>
+-->  
 
 <LI> <A HREF="hp/picts.html"> Picture </A>
      /
