--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ a bit of Technology
      /
      <A HREF="hp/erdos.html"> Erdos# </A>
 <LI> <A HREF="hp/background.html"> Curriculum_Vitae </A>
-<!--
 <LI> <A HREF="hp/sibgrapi2016.html"> 60</A>,
-  <A href=http://lhf.impa.br/lvelho60/> and counting... </A>
-<A href=https://web.tecgraf.puc-rio.br/~lhf/lvelho60/> and_counting... </A>
+<!--
+  <A href="http://lhf.impa.br/lvelho60/> and counting... </A>
 -->  
+<A href="https://web.tecgraf.puc-rio.br/~lhf/lvelho60/"> and_counting... </A>
 
 <LI> <A HREF="hp/picts.html"> Picture </A>
      /
@@ -129,7 +129,6 @@ a bit of Technology
 <UL>
 <LI> <A HREF="hp/pers/personal.html"> Personal </A>
 <LI> <A HREF="hp/elsewhere.html"> Elsewhere </A>
-
 <!--
 <LI> <A HREF="hp/links.html"> Bookmarks </A>
 -->
