--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ p.motto {
 <TD STYLE="text-align: right">
 <P>
 <I>Senior Researcher</I>
-<A HREF=hp/impa.html>IMPA</A>
+<A HREF="hp/impa.html">IMPA</A>
 <!-- / <A HREF="http://www.mct.gov.br">MCT</A>, -->
 <P>
 <I>Leading Scientist</I> of the<BR>
-<A HREF=hp/visgraf-lab.html>VISGRAF</A> Laboratory
+<A HREF="hp/visgraf-lab.html">VISGRAF</A> Laboratory
 <P CLASS="motto">
 Mathematics, Art,
 a bit of Technology
