--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!--
 <meta name="msapplication-TileImage" content="href=http://lvelho.impa.br/favicons/ms-icon-144x144.png">
 -->
+<meta charset="utf-8"/>
 <meta name="theme-color" content="#ffffff">
 <STYLE TYPE="text/css">
 body {
