--- a/hp/pers/personal.html
+++ b/hp/pers/personal.html
@@ -4,8 +4,19 @@
 </head>
 
 <body>
-<h1></h1>
+<h1>Personal Stuff</h1>
 
+<hr>
 
-<address></address>
+<UL>
+  <LI> <a href=../galleries.html> My Photo Galleries </a>
+</UL>
+
+<hr>
+
+<address>
+<P>
+Last Update:
+by <A HREF="http://www.impa.br/~lvelho">lvelho</A>.
+</address>
 </body> </html>
