--- a/hp/pers/personal.html
+++ b/hp/pers/personal.html
@@ -9,7 +9,7 @@
 <hr>
 
 <UL>
-  <LI> <a href=../galleries.html> My Photo Galleries </a>
+  <LI> <a href=../../galleries.html> My Photo Galleries </a>
 </UL>
 
 <hr>
