--- a/ipcv/index.html
+++ b/ipcv/index.html
@@ -64,9 +64,8 @@ IMPA website
 
 <UL>
 <LI> <a href=lectures/schedule.html> Schedule </a>
-<LI> <a href=lectures/videos.html> Lecture Videos on Fundamentals</a>
-<LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRrAUBu4xtN28htuAv3tiR3>
-Lecture Videos on Generative Models</a>
+<LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRaFa39TdNN3FgPAKkcuHvj> Lecture Videos on Fundamentals</a>
+<LI> <a href=https://www.youtube.com/playlist?list=PLo4jXE-LdDTRrAUBu4xtN28htuAv3tiR3> Lecture Videos on Generative Models</a>
 <LI> <a href=lectures/lab.html> Lab Practice </a>
 
 <!--
@@ -82,10 +81,11 @@ Lecture Videos </a>
 <H3>Coursework</H3>
 
 <UL>
-<LI> <a href=./proj/index.html> Project Topics </a>
+<LI> <a href=./project-topics.pdf> Project Topics </a>
+<LI> <a href=./presentations.pdf> Presentations </a>
 <!--
 <p>
-<LI> <a href=./proj/presentations.html> Presentations </a>
+
 <LI> <a href=./proj/slides.html> Slides </a>
 -->
 </UL>
