--- a/ipcv/lectures/schedule.html
+++ b/ipcv/lectures/schedule.html
@@ -36,10 +36,10 @@ October
 
 November
 
-02-04  Generative Models | GANs
-09-11  StyleGAN / AnyCostGAN
-16-18  BigGAN
-23-25  GauGAN
+   02-04  Generative Models | GANs
+08-09-11  Lab | Quality
+15-16-18  Lab | Conditional 
+22-23-25  Lab | Authoring
 
 </PRE>
 
