--- a/hp/visgraf-lab.html
+++ b/hp/visgraf-lab.html
@@ -1,12 +1,16 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
-<title></title>
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <title>HTML Redirect</title>
+  <meta http-equiv="refresh" 
+        content="0; url = https://visgraf.github.io/" />
 </head>
 
 <body>
-<h1></h1>
+<!--
 <center>
 <img src="picts/visgraf-lab.png">
-<center>
-<address></address>
+</center>
+-->
 </body> </html>
