--- a/hp/activities.html
+++ b/hp/activities.html
@@ -9,6 +9,16 @@
 <HR>
 <DL>
 
+<DT> November 14-16
+<DD>
+<A HREF="https://smi2021.github.io/">
+SMI 2021 - Subdivision Day
+</A>,
+<BR>
+Invited Speaker
+<P>
+
+  
 <DT> October 18-22
 <DD>
 <A HREF="https://www.inf.ufrgs.br/sibgrapi2021/">
