--- a/ipcv/lectures/lab.html
+++ b/ipcv/lectures/lab.html
@@ -14,9 +14,16 @@
 <H3>Introduction to PyTorch and Neural Networks</H3>
 <UL>
   <LI> <a href=https://www.youtube.com/watch?v=cGxv8tOaA7I>Tutorial Video </a>
-  <LI> <a href=https://colab.research.google.com/github/pgdinamica/deeplearning/blob/main/notebooks/Introdução_ao_Pytorch.ipynb>Colab Notebook</a>
+  <LI> <a href=https://colab.research.google.com/github/pgdinamica/deeplearning/blob/main/notebooks/Introdu%C3%A7%C3%A3o_ao_Pytorch.ipynb>Colab Notebook</a>
 </UL>
 
+<H3>Convolution Networks Basics</H3>
+<UL>
+  <LI> <a href=https://youtu.be/doT7koXt9vw>Tutorial Video </a>
+  <LI> <a href=https://colab.research.google.com/github/pgdinamica/deeplearning/blob/main/notebooks/RedesConvolucionais.ipynb>Colab Notebook</a>
+</UL>
+
+<p>
 
 <hr>
 
