--- a/hp/activities.html
+++ b/hp/activities.html
@@ -53,6 +53,10 @@ Teaching this course during the first term at IMPA.
 </DL>
 
 <HR>
+
+<H3> <a href=curr/index.html>Current Research</a> </H3>
+
+<HR>
 <H3> Past Activities </H3>
 
 <UL>
