--- a/ipcv/etc.html
+++ b/ipcv/etc.html
@@ -17,75 +17,10 @@
 <UL>
 
 <LI>
-<a href=https://www.panono.com/>
-Panopo
-</A> 
-(November 2014)
-
-<LI>
-<a href=http://www.dolby.com/us/en/technologies/dolby-vision.html>
-Dolby Vision
-</A> | <a href=http://gizmodo.com/how-dolby-vision-works-and-how-it-could-revolutionize-1594894563>
-news </a>
-(1 October 2014)
-
-
-<LI>
-<a href=http://algolux.com>
-Algolux - Computational Optics
-</A> | <a href=http://www.technologyreview.com/news/530476/a-path-to-better-smartphone-cameras/?utm_campaign=newsletters&utm_source=newsletter-daily-all&utm_medium=email&utm_content=20140904> news </a>
- (4 Spetember 2014)
-
-<LI>
-<a href=http://bits.blogs.nytimes.com/2014/08/21/next-for-virtual-reality-video-without-the-games/?_php=true&_type=blogs&emc=edit_th_20140822&nl=todaysheadlines&nlid=6856210&_r=0>
-Virtual Reality: Video 360
-</A>
- (21 August 2014)
-
-<LI>
-<a href=http://www.redsharknews.com/technology/item/1934-dubai-airport-in-glorious-360-degree-4k?utm_source=www.lwks.com+subscribers&utm_campaign=8479b374ab-RSN_Aug22_2014&utm_medium=email&utm_term=0_079aaa3026-8479b374ab-74648925>
-Dubai Airport 360 4K
-</A>
- (20 August 2014)
-
-<LI>
-<a href=http://seminarios.impa.br/visualizar?id=5954>
-Graphical models for Computer Vision
-</A>
- (CG Seminar on Aug 20)
-
-
-<LI>
-<a href=http://blog.playosmo.com/post/94655155207/a-peek-into-osmos-reflective-ai-technology>
-Osmo Reflective AI
-</A>
- (18 August 2014)
-
-<LI>
-<a href=http://blog.leapmotion.com/image-api-now-available-v2-tracking-beta/>
-Leap Motion Infrared Image API
-</A>
- (15 August 2014)
-
-<LI>
-<a href=http://s2014.siggraph.org/countdown/1>
-The Biggest Mobile-Device Image Ever!
-</A>,
-| <a href=https://www.youtube.com/watch?v=NnttGDXer_o&list=PLUPhVMQuDB_ZmhTKElLi-_quy2pD3Qcw3>
-news report </a>
- (SIGGRAPH 2014)
-
-<LI>
-<a href=http://news.brown.edu/articles/2014/08/photo>
-Photo editing algorithm changes seasons automatically
-</A>
- (SIGGRAPH 2014)
-
-<LI>
-<a href=http://petapixel.com/2014/06/30/sony-patent-shows-take-light-field-camera/>
-Sony Patent on a Light Field Camera
-</A>
- (June 2014)
+<a href=misc/Wavelets-WIRED.pdf>
+How Wavelets Let Researchers Understand Data
+  </A>
+ (WIRED, Oct 2021)
 
 </UL>
 
@@ -95,51 +30,12 @@ Sony Patent on a Light Field Camera
 <UL>
 
 <LI>
-<a href=http://www.visgraf.impa.br/Data/RefBib/PS_PDF/rlp10/resolution-limits-aug2010.pdf>
-Resolution Limits in Digital Photography
-</A>, Luiz Velho
- (Talk on Aug 2010)
-
-<LI>
 <a href=http://cs.brown.edu/~pff/talks/UAI-pff.pdf>
 Graphical models for Computer Vision
 </A>, Pedro Felzenszwalb 
  (Talk on Aug 2014)
 
 <P />
-
-<LI>
-<a href=https://github.com/thsant/scipy4cv>
-Tutorial: SciPy and OpenCV
-</A>
- (SIBGRAPI 2014)
-<LI>
-<a href=https://www.youtube.com/watch?v=f3RxcAoAYbU>
-Invited Talk: Robert Pless, Washington University
-</A>
- (SIBGRAPI 2014)
-<P>
-<LI>
-<a href=http://graphics.cs.brown.edu/research/exploratory/freeSoftware/repository/edu/brown/cs/exploratories/applets/nyquist/nyquist_limit_guide.html>
-Nyquist Limit Java Applet
-</A>
- (Brown)
-<LI>
-<a href=http://graphics.cs.cmu.edu/projects/gradient-paint/>
-Real-Time Gradient-Domain Painting
-</A>
- (CMU)
-<LI>
-<a href=http://www.csd.uwo.ca/~yuri/Abstracts/iccv13-one-cut-abs.shtml>
-Grabcut in One Cut
-</A>
- (UWO)
-<LI>
-<a href=http://www.imgfsr.com/CVPR2011/Tutorial6/RANSAC_CVPR2011.pdf>
-RANSAC 30 years after
-</A>
- (CVPR 2011)
-
 
 </UL>
 <BR>
