--- a/ipcv/etc.html
+++ b/ipcv/etc.html
@@ -16,6 +16,13 @@
 
 <UL>
 
+  <LI>
+<a href=https://nvlabs.github.io/stylegan3/>
+StyleGAN 3
+  </A>
+ (Oct 2021)
+
+  
 <LI>
 <a href=misc/Wavelets-WIRED.pdf>
 How Wavelets Let Researchers Understand Data
