--- a/ipcv/etc.html
+++ b/ipcv/etc.html
@@ -17,11 +17,17 @@
 <UL>
 
   <LI>
+<a href=https://stylegan-nada.github.io>
+StyleGAN NADA
+  </A>
+ (Oct 2021)
+
+  
+  <LI>
 <a href=https://nvlabs.github.io/stylegan3/>
 StyleGAN 3
   </A>
  (Oct 2021)
-
   
 <LI>
 <a href=misc/Wavelets-WIRED.pdf>
