--- a/hp/sibgrapi2016.html
+++ b/hp/sibgrapi2016.html
@@ -3,8 +3,7 @@
 <title> SIBGRAPI 2016 </title>
 
 </HEAD>
-<BODY bgcolor = #525252 text="#FFFFFF"
-link="#FFFFF9" vlink="#FFFFFF" alink="#FFFFFF">
+<BODY>
 
 
 <center>
