--- a/ipcv/lectures/schedule.html
+++ b/ipcv/lectures/schedule.html
@@ -36,10 +36,11 @@ October
 
 November
 
-   02-04  Generative Models | GANs
-08-09-11  Lab | Quality
-15-16-18  Lab | Conditional 
-22-23-25  Lab | Authoring
+02-04  Generative Models | GANs
+09-11  Lab | Quality
+16-18  Conditional 
+23-25  Authoring
+30     Demo
 
 </PRE>
 
