--- a/hp/background.html
+++ b/hp/background.html
@@ -259,8 +259,14 @@ IMPA -
 <!--
   <a href=https://impa.br/en_US/noticias/inspirado-por-da-vinci-velho-acredita-na-volta-a-renascenca/>
 -->
+  <a href=./misc/perfil-lvelho.pdf>
+blog </a>
+  | 
+  <a href=https://youtu.be/2wmkc7nnMUo>
+video </a>
+  |
 <a href=https://hi-in.facebook.com/IMPABR/posts/1502175929983007/>
-post </a>
+facebook </a>
 
 
 <BR>
