--- a/ipcv/lectures/lab.html
+++ b/ipcv/lectures/lab.html
@@ -23,6 +23,19 @@
   <LI> <a href=https://colab.research.google.com/github/pgdinamica/deeplearning/blob/main/notebooks/RedesConvolucionais.ipynb>Colab Notebook</a>
 </UL>
 
+<H3>Basic GAN - Multilayer Perceptron architecture</H3>
+<UL>
+  <LI> <a href=https://arxiv.org/abs/1406.2661>Paper </a>
+  <LI> <a href=https://colab.research.google.com/github/visgraf/labipcv/blob/main/notebooks/BaseGAN.ipynb>Colab Notebook</a>
+</UL>
+
+<H3>DC-GAN - Convolutional architecture</H3>
+<UL>
+  <LI> <a href=https://arxiv.org/abs/1511.06434>Paper </a>
+  <LI> <a href=https://github.com/visgraf/labipcv/raw/main/docs/dcgan.pdf> Class Slides </a>
+  <LI> <a href=https://github.com/visgraf/labipcv/blob/main/notebooks/ImprovingGANs.ipynb>Colab Notebook</a>
+</UL>
+
 <p>
 
 <hr>
