--- a/hp/activities.html
+++ b/hp/activities.html
@@ -9,6 +9,16 @@
 <HR>
 <DL>
 
+  <DT> December 4
+<DD>
+<A HREF="https://vfxrio.com.br/">
+VFXRio Online Edition
+</A>,
+<BR>
+Keynote Speaker
+<P>
+
+  
 <DT> November 14-16
 <DD>
 <A HREF="https://smi2021.github.io/">
