--- a/hp/activities.html
+++ b/hp/activities.html
@@ -18,6 +18,14 @@ VFXRio Online Edition
 Keynote Speaker
 <P>
 
+<DT> November 15
+<DD>
+<A HREF="./misc/carta-aberta-ABC.pdf">
+Carta Aberta ONMC
+</A>,
+<BR>
+Subscriber
+<P>
   
 <DT> November 14-16
 <DD>
