--- a/ipcv/etc.html
+++ b/ipcv/etc.html
@@ -16,6 +16,18 @@
 
 <UL>
 
+    <LI>
+<a href=https://yilundu.github.io/gem/>
+Learning Signal-Agnostic Manifolds of Neural Fields
+  </A>
+ (Nov 2021)
+
+  <LI>
+<a href=http://www.diva-portal.org/smash/record.jsf?pid=diva2%3A1356187&dswid=-2224>
+Dissection of a Generative Network for Music Composition
+  </A>
+ (July 2019)
+  
   <LI>
 <a href=https://stylegan-nada.github.io>
 StyleGAN NADA
