--- a/ipcv/lectures/lab.html
+++ b/ipcv/lectures/lab.html
@@ -33,7 +33,7 @@
 <UL>
   <LI> <a href=https://arxiv.org/abs/1511.06434>Paper </a>
   <LI> <a href=https://github.com/visgraf/labipcv/raw/main/docs/dcgan.pdf> Class Slides </a>
-  <LI> <a href=https://github.com/visgraf/labipcv/blob/main/notebooks/ImprovingGANs.ipynb>Colab Notebook</a>
+  <LI> <a href=https://colab.research.google.com/github/visgraf/labipcv/blob/main/notebooks/ImprovedGAN.ipynb>Colab Notebook</a>
 </UL>
 
 <p>
