--- a/ipcv/etc.html
+++ b/ipcv/etc.html
@@ -49,6 +49,37 @@ How Wavelets Let Researchers Understand Data
 
 </UL>
 
+<H3>SIGGRAPH Asia 2021</H3>
+
+<UL>
+
+<LI>
+<a href=https://pose-with-style.github.io>
+Pose with Style: Detail-Preserving Pose-Guided Image Synthesis with Conditional StyleGAN
+</A>
+
+<LI>
+<a href=https://crossminds.ai/video/barbershop-gan-based-image-compositing-using-segmentation-masks-60be6b65a65fb37cc4b45bc3/>
+Barbershop: GAN-based Image Compositing using Segmentation Masks
+</A>
+
+<LI>
+<a href=https://vcai.mpi-inf.mpg.de/projects/NeuralActor/>
+Neural Actor: Neural Free-view Synthesis of Human Actors with Pose Control
+</A>
+
+<LI>
+<a href=https://repo-sam.inria.fr/fungraph/freestylegan/>
+FreeStyleGAN: Free-view Editable Portrait Rendering with the Camera Manifold
+</A>
+| <a href=https://youtu.be/MRWNBRa6EJ0>
+  video
+  </a>
+
+  
+<P />
+
+</UL>
 
 <H3>Additional Material</H3>
 
