--- a/hp/activities.html
+++ b/hp/activities.html
@@ -9,6 +9,15 @@
 <HR>
 <DL>
 
+    <DT> December 10
+<DD>
+<A HREF=https://petrobras.com.br/en/>
+Multivisões Imersivas - Universidade PETROBRAS
+</A>,
+<BR>
+Keynote Speaker and Panelist
+<P>
+  
   <DT> December 4
 <DD>
 <A HREF="https://vfxrio.com.br/">
