--- a/hp/activities.html
+++ b/hp/activities.html
@@ -9,11 +9,11 @@
 <HR>
 <DL>
 
-    <DT> December 10
+    <DT> December 13
 <DD>
 <A HREF=https://petrobras.com.br/en/>
-Multivisões Imersivas - Universidade PETROBRAS
-</A>,
+Multivisoes Imersivas - Universidade PETROBRAS
+</A>
 <BR>
 Keynote Speaker and Panelist
 <P>
@@ -22,11 +22,20 @@ Keynote Speaker and Panelist
 <DD>
 <A HREF="https://vfxrio.com.br/">
 VFXRio Online Edition
-</A>,
+</A>
 <BR>
 Keynote Speaker
 <P>
 
+    <DT> December 1
+<DD>
+<A HREF="https://seshat.museunacional.ufrj.br/semnaen/">
+SEMNA - Conference of Egyptology 2021
+</A>
+<BR>
+Keynote Speaker
+<P>
+  
 <DT> November 15
 <DD>
 <A HREF="./misc/carta-aberta-ABC.pdf">
