--- a/hp/demos.html
+++ b/hp/demos.html
@@ -9,8 +9,12 @@
 <hr>
 
 <center>
-<h3> Coming Soon</h3>
+<h3> Exhibits </h3>
 </center>
+<UL>
+  <LI> <a href=https://docs.google.com/forms/d/1AJas4yELHBTPQ2wV-hlnYUeIHUprtGkbdQBIO0Xhblg>Photo Gallery</a>
+</UL>
+
 
 <hr>
 
