--- a/hp/demos.html
+++ b/hp/demos.html
@@ -12,7 +12,8 @@
 <h3> Exhibits </h3>
 </center>
 <UL>
-  <LI> <a href=https://docs.google.com/forms/d/1AJas4yELHBTPQ2wV-hlnYUeIHUprtGkbdQBIO0Xhblg>Photo Gallery</a>
+  <LI> <a href= https://docs.google.com/forms/d/1RUGKNV4S9Vey7Y4LS1w2dnZkX53_4a5dLhQEXSZjeZE/viewform>
+  Photo Gallery</a>
 </UL>
 
 
