--- a/s3d/lectures/schedule.html
+++ b/s3d/lectures/schedule.html
@@ -7,41 +7,152 @@
 
 <BODY bgcolor = #ffffff>
 
-<H1>Schedule</H1>
+<H1>Class Schedule</H1>
 
 <hr>
-<PRE>
 
-08-10 / 03 -> [## Intro / 3D DL ##]
-16-18 / 03 - (01 collab / pytorch)  | ML / DL 
+<dl>
+  
+<dt>10/03 - Course Overview </dt>
+    <ul>
+      <LI> 3D Systems
+      <LI> AI Graphics
+    </ul>
 
-16-18 / 03 -> [## Signal DL / Geometric DL ##]
-23-25 / 03 - (02 pytorch3D*) |  Geometry for 3D Graphics
+<dt>17/03 - Machine Learning Basics </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/aDDddexNnJA>
+      Assignment 1 </a>
+      <LI> <a href=https://youtu.be/zbo57u_VH-s >
+      Machine Learning </a>
+      <LI> <a href=https://youtu.be/FsRkyGOoxv8 >
+      Deep Learning </a>
+    </ul>
 
-30-01 / 04 @ Cameras / Plenoptic 
-06-08 / 04 - (03 bundle adjustment)  | Fourier Theory / Multiscale  
-13-15 / 04 @ Images / Volumes 
+      
+<dt>24/03 - Signals and Deep Learning</dt>
+    <ul>
+      <LI> Learning Signals
+      <LI> Geometric Deep Learning
+    </ul>
 
+<dt>07/04 - Geometry for Graphics and Vision</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/ObN2gX__Kq0 >
+      Assignment 2</a>
+      <LI> <a href=https://youtu.be/jrHEZWee_v4 >
+      Geometry for 3D Graphics</a>
+      <LI> <a href=https://youtu.be/42Z1udS75A0 >
+      Projective Geometry in Computer Vision</a>
+    </ul>
 
-20-22 / 04 - (04 load texture*) | Geometric Models 
-27-29 / 04 - (05 load shapenet data) 3D Nets / Implicit 
-04-04 / 05 @ Points / Meshes 
+<dt>14/04 - Cameras</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/kKlhPNlPM1w >
+      Visual Information and Image Acquisition</a>
+      <LI> <a href=https://youtu.be/LMAk6Gt6tKc >
+      Image Collections</a>
+    </ul>
 
+<dt>21/04 - Fourier Theory and Multiscale</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/Zqy-KNbZbDM >
+      Assignment 3</a>
+      <LI> <a href=https://youtu.be/loOTufbS6nU >
+      Digital Image and Filters</a>
+      <LI> <a href=https://youtu.be/JnSpCW5znJ4 >
+      Image Representation and Multiscale Models</a>
+    </ul>
 
-12-13 / 05 - (06 deform sphere to dolfin) | Viewing / 3D Reconstruction 
-18-20 / 05 - (07 render point clouds / meshes) Illumination / Render 
+<dt>27/04 - Images and Volumes </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/RzVQ2Gk3IRM >
+      Convolutional Neural Networks</a>
+      <LI> <a href=https://youtu.be/-7JytN-8fKI >
+      Volumetric CNNs</a>
+    </ul>
 
+<dt>05/05 - Geometric Modeling </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/eLMtiMAhk-M >
+      Assignment 4</a>
+      <LI> <a href=https://youtu.be/X4cTOH1Q4Uw >
+      Representation of Geometric Models</a>
+      <LI> <a href=https://youtu.be/KSek1E1jYsY >
+      Meshes: Concepts and Theory</a>
+    </ul>
 
-25-27 / 05 - (08 differentiable rendering*) Differentiable Rendering 
-01-03 / 06 - (09 camera position optimization / fit mesh with texture) | Materials, Shading / Texture 
+<dt>12/05 - 3D Neural Nets / Implicit Rep</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/fhiks_uSikg >
+      Assignment 5</a>
+      <LI> <a href=https://youtu.be/wJkv-pNrDss >
+      3D Representation and Neural Networks</a>
+      <LI> <a href=https://youtu.be/-UKhIo13Hrg >
+      Deep Implicit Representations</a>
+    </ul>
 
-08-10 / 06 -> [## Neural Implicits Diff Geom / MIP-plicits ##]
-08-10 / 06 - (10 NeRF*) 
-08-10 / 06 -> [## Neural Rendering / Neural Scene Representation ##]
+<dt>19/05 - Points and Meshes</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/K-EbnyIhu2g >
+      DL for Point Clouds</a>
+      <LI> <a href=https://youtu.be/Nc6CLGIMNDk >
+      Deep Meshes</a>
+    </ul>
 
-29-01 / 06 - **Oral Exams**
+<dt>26/05 - Viewing and 3D Reconstruction </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/zB3Tspt1Qfw >
+      Assignment 6</a>
+      <LI> <a href=https://youtu.be/l8w80uk7et8 >
+      Cameras and Viewing Transformations</a>
+      <LI> <a href=https://youtu.be/R9gbhQ8PPTA >
+      Multi-View 3D Deep Learning</a>
+    </ul>
 
-</PRE>
+<dt>02/06 - Illumination and Rendering</dt>
+    <ul>
+      <LI> <a href=https://youtu.be/ZedGooy9dXc >
+      Assignment 7</a>
+      <LI> <a href=https://youtu.be/JyU_jjWHegY >
+      Illumination</a>
+      <LI> <a href=https://youtu.be/TbJtYevt1KM >
+      Ray Tracing</a>
+    </ul>
+
+<dt>09/06 - Learning 3D Scenes from Images </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/WC6evmY0kv8 >
+      Lab Class 8</a>
+      <LI> <a href=https://youtu.be/FyHHviwhMLo >
+      Assignment 8</a>
+      <LI> <a href=https://youtu.be/_d-Vs8XFcgw >
+      Assignment 9</a>
+    </ul>
+
+<dt>16/06 - Differentiable Rendering </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/F3g22FGC1Ws >
+      Differentiable Rendering Applications</a>
+      <LI> <a href=https://youtu.be/A1cRnNs3S5c >
+      Machine Learning and Rendering</a>
+    </ul>
+
+<dt>23/06 - Materials, Shading and Texture </dt>
+    <ul>
+      <LI> <a href=https://youtu.be/OZYtF1AjYts >
+      Light, Shading and Materials</a>
+      <LI> <a href=https://youtu.be/Cu2ZoUCaOfM >
+      Texture Mapping</a>
+    </ul>
+
+<dt>30/06 - </dt>
+    <ul>
+      <LI> Oral Exam
+    </ul>
+
+</dl>
+
 
 <hr>
 
