--- a/s3d/datasets/datasets.html
+++ b/s3d/datasets/datasets.html
@@ -17,7 +17,7 @@
 <ul>
 
 <P>
-<LI> <a href=/> 3D Models Datasets </a>
+<LI> <a href=datasets-3D-models.pdf> 3D Models Datasets </a>
 
 </ul>
 
@@ -25,14 +25,14 @@
 
 <UL>
 
-<LI> <a href=> 3D Scenes Datasets </a>
+<LI> <a href=datasets-3D-scenes.pdf> 3D Scenes Datasets </a>
 <P>
 
 </ul>
 
 <h3> RGB-D </h3>
 <ul>
-<LI> <a href=>
+<LI> <a href=RGB-D-datasets.pdf>
 RGB-D Datasets
 </a>
 
