--- a/s3d/index.html
+++ b/s3d/index.html
@@ -58,7 +58,7 @@ IMPA website
 <LI> <a href=reading.html>Reading </a>
 <p>
 <LI> <a href=./software/index.html> Software </a>
-<LI> <a href=./software/datasets.html> Datasets </a>
+<LI> <a href=./datasets/datasets.html> Datasets </a>
   
 </UL>
 
