--- a/s3d/software/index.html
+++ b/s3d/software/index.html
@@ -14,17 +14,17 @@
 
 <h3> Python / Etc </h3>
 <UL>
-<LI> <a href=>
+<LI> <a href=https://cs231n.github.io/python-numpy-tutorial/>
 Python and Collab
 </a>(Stanford)
 </ul>
 
 <h3>PyTorch</h3>
 <UL>
-<LI> <a href=>
+<LI> <a href=https://pytorch.org>
 Web Portal
 </a>
-<LI> <a href=>
+<LI> <a href=https://www.pytorchlightning.ai>
 Lightning
 </a>
 </ul>
@@ -35,14 +35,14 @@ Lightning
 <H3>OpenCV</H3>
 <UL>
 <LI>
-<a href=>
+<a href=https://opencv.org>
 Web Portal</a>
 </UL>
 
 <H3>Qt</H3>
 <UL>
 <LI>
-<a href=>
+<a href=https://www.qt.io>
 Qt Library / Qt Creator</a>
 </UL>
 
