--- a/s3d/courses.html
+++ b/s3d/courses.html
@@ -7,20 +7,15 @@
 
 <BODY bgcolor = #ffffff>
 
-<H1> Related Courses </H1>
+<H1> Elsewhere </H1>
 
 <hr>
 
-<H3>Mobile Vision</H3>
+<H3>Courses</H3>
 <UL>
 <li>
-<a href=https://sites.google.com/a/itseez.com/mobile-vision-with-opencv/>
-Vision Applications on Mobile using OpenCV
-</a>
-<p>
-<LI>
-<a href=http://web.eecs.umich.edu/~silvio/teaching/EECS598_2010/eecs598.html>
-Advanced Topics in Mobile Computer Vision
+<a href=https://cse291-i.github.io/WI18/index.html>
+Machine Learning for 3D Data
 </a>
 </UL>
 
