--- a/s3d/index.html
+++ b/s3d/index.html
@@ -39,7 +39,7 @@ Hallison Paz
 </A>
 
 <LI> Classes:
-(Mondays), Tuesdays and Thursdays, 13:30 to 15:00 (online)
+Thursdays, 13:30 to 15:00 (online)
 
 <LI> Registration:
 IMPA website 
